--- a/biblioteca/build.gradle
+++ b/biblioteca/build.gradle
@@ -17,6 +17,7 @@ dependencies {
 	  
 	  compile 'com.h2database:h2:1.4.194'	
 	  compile 'org.hibernate:hibernate-core:5.2.9.Final'	
+	  compile 'javax.xml.bind:jaxb-api:2.3.0'
 	      
 	  testCompile 'junit:junit:4.12'
 	  testCompile 'org.mockito:mockito-all:1.10.19'
